--- a/RAG.ini
+++ b/RAG.ini
@@ -1,7 +1,7 @@
 [RAG]
 embedding_model = sentence-transformers/all-MiniLM-L6-v2
-llm_model_path = C:/Users/oumar/Mistral-7B-Instruct-v0.1
-data_path = C:/Users/oumar/Documents/MASTER IA/ANNE - 2/SEMESTRE 1/TRANSFORMERS_NLP/RAG/NTP
-file_path = C:/Users/oumar/Documents/MASTER IA/ANNE - 2/SEMESTRE 1/TRANSFORMERS_NLP/RAG/NTP/Guide_pour_etranger_structurer.pdf
-persist_directory = C:/Users/oumar/chroma_db
-cache_folder = C:/Users/oumar/.cache
+llm_model_path = data/Mistral-7B-Instruct-v0.1
+data_path = data
+file_path = data/Guide_pour_etranger_structurer.pdf
+persist_directory = data/chroma_db
+cache_folder = data/.cache
